@@ -13,7 +13,7 @@ delphinusdnsd gets a little better.
 For 1.8.0 release
 
 - Shape up the NSEC code as it seems NSEC is having a renaissance, at least
-  to have replicant compatibility for NSEC
+  to have replicant compatibility for NSEC		[DONE]
 - filter input to dddctl query for escape codes.	[DONE]
 - make delphinusdnsd not restart the entire daemon upon axfr, just merge or
 internally build a new database and switch them.	[DONE]
